--- a/desafio.html
+++ b/desafio.html
@@ -17,12 +17,11 @@
         </form>
     </div>
     <div>
-        <button onclick="renderTable()" id="btn" class="btn btn-primary " type="submit"> <i class="fas fa-sync"></i> Atualizar Lista</button>
+        <button  id="btn" class="btn btn-primary " type="submit"> <i class="fa fa-refresh" aria-hidden="true"></i> Atualizar Lista</button>
     </div>
           <table class="table table-dark table-striped">
             <thead>
               <tr>
-
                 <th>ID</th>
                 <th>Título</th>
                 <th>Ações</th>
@@ -43,17 +42,17 @@
                     <form>
                       <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Titulo:</label>
-                        <input type="text" class="form-control" id="recipient-name">
+                        <input type="text" class="form-control" id="titulo">
                       </div>
                       <div class="form-group">
                         <label for="message-text" class="col-form-label">Descrição:</label>
-                        <textarea class="form-control" id="message-text"></textarea>
+                        <textarea class="form-control" id="descrição"></textarea>
                       </div>
                     </form>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    <button type="button" class="btn btn-primary">Salvar</button>
+                    <button type="button"  id="salvar"  class="btn btn-primary">Salvar</button>
                   </div>
                 </div>
               </div>
@@ -76,6 +75,7 @@
             </div>
             </table>
 </body>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
