--- a/desafio.html
+++ b/desafio.html
@@ -7,19 +7,31 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./desafio.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
 </head>
 <body>
+  <div class='ripple-background'>
+    <div class='circle xxlarge shade1'></div>
+    <div class='circle xlarge shade2'></div>
+    <div class='circle large shade3'></div>
+    <div class='circle mediun shade4'></div>
+    <div class='circle small shade5'></div>
+  </div>
     <div class="container">
        <div class="topo">
         <form class="form-search" action="">
-            <h1>Fake API Challenger</h1>
-            <input onkeyup="filterInput()" placeholder="Pesquisar" type="text" id="pesquisar" mb-3/>
+            <h1>Fake API Challenger <br><br>
+              <a href="./home.html" id="home" class="btn btn-sm animated-button "> <i class="fa fa-home" aria-hidden="true"></i>Home</a>
+              <a href="#"dropdown-item id="exampleModalLabell" data-toggle="modal" data-target="#exampleModall" class="btn btn-sm"><i class="fa fa-plus" aria-hidden="true"></i>Adicionar Post</a>
+            </h1>
         </form>
     </div>
     <div>
-        <button  id="btn" class="btn btn-primary " type="submit"> <i class="fa fa-refresh" aria-hidden="true"></i> Atualizar Lista</button>
+        <button  id="btn" class="btn outline-primary" type="submit"> <i class="fa fa-refresh" aria-hidden="true"></i> Atualizar Lista</button>
     </div>
-          <table class="table table-dark table-striped">
+      <table id="teste"></table>
+              <table id="datatable" class="table table-hover">
             <thead>
               <tr>
                 <th>ID</th>
@@ -28,8 +40,7 @@
               </tr>
             </thead>
             <tbody id="t-body"></tbody>
-
-              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                  <div class="modal-content">
                    <div class="modal-header">
@@ -57,6 +68,38 @@
                 </div>
               </div>
             </div>
+
+            <div class="modal fade" id="exampleModall" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+               <div class="modal-content">
+                 <div class="modal-header">
+                   <h5 class="modal-title" id="exampleModalLabel">Adicionar Post</h5>
+                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="recipient-name" class="col-form-label">User Id:</label>
+                      <input type="text" class="form-control" id="userID">
+                      <label for="recipient-name" class="col-form-label">Titulo:</label>
+                      <input type="text" class="form-control" id="titulo">
+                    </div>
+                    <div class="form-group">
+                      <label for="message-text" class="col-form-label">Descrição:</label>
+                      <textarea class="form-control" id="descrição"></textarea>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                  <button type="button"  id="salvar"  class="btn btn-primary">Salvar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
             <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
@@ -68,16 +111,19 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
-                    <button type="button" id="delete" class="btn btn-primary">SIM</button>
+                    <button type="button" id="delete-post" class="btn btn-primary">SIM</button>
                   </div>
                 </div>
               </div>
             </div>
+            <div style="font-size: 30rem; position: absolute; right: 50%; color: white; animation: rotate 2s infinite; visibility: hidden;" class="loader"></div>
             </table>
 </body>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
  <script src="./desafio.js"></script>
+
 </html>
